helm/lakeFS/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lakefs-ingress
  namespace: lakefs
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "traefik"
    kubernetes.io/tls-acme: "true"
#    traefik.ingress.kubernetes.io/router.entrypoints: web
#    traefik.ingress.kubernetes.io/router.tls: "false"
#    ingress.kubernetes.io/rewrite-target: /


spec:
  tls:
  - hosts:
      - lakefs.local
    secretName: letsencrypt
  rules:
  - host: lakefs.local #change it from here: C:\Windows\System32\drivers\etc,
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: lakefs
            port:
              number: 80
